# RUNTIME_PROJECT

./: .gitignore  CMakeLists.txt  README.md  Readme.txt
Operators/: CMakeLists.txt
Operators/include/: Conv2DLayer.h  ConvolutionLayer.h  FlattenLayer.h  LinearLayer.h  MaxPoolingLayer.h  Relu.h
Operators/src/: Conv2DLayer.cpp  ConvolutionLayer.cpp  FlattenLayer.cpp  LinearLayer.cpp  MaxPoolingLayer.cpp  Relu.cpp
Test_Operators/: CMakeLists.txt
Test_Operators/src/: Test_ConvolutionLayer.cpp  Test_FlattenLayer.cpp  Test_LinearLayer.cpp  Test_MaxPoolingLayer.cpp  Test_ReluLayer.cpp
configs/: layer_config.json
configs/json/: layers_config.json
data/layer_dumps/: layer_0_Conv2d_weights.npy  layer_1_MaxPool2d_input.npy  layer_2_Conv2d_weights.npy  layer_3_MaxPool2d_output.npy  layer_4_Conv2d_bias.npy  layer_4_Conv2d_output.npy  layer_6_Linear_bias.npy  layer_7_Linear_bias.npy
data/reference/layer_dumps/: layer_0_Conv2d_bias.npy  layer_0_Conv2d_input.npy  layer_0_Conv2d_output.npy  layer_2_Conv2d_bias.npy  layer_2_Conv2d_input.npy  layer_2_Conv2d_output.npy  layer_3_MaxPool2d_input.npy  layer_4_Conv2d_weights.npy  layer_5_MaxPool2d_input.npy  layer_5_MaxPool2d_output.npy  layer_6_Linear_input.npy  layer_6_Linear_output.npy  layer_6_Linear_weights.npy  layer_7_Linear_input.npy  layer_7_Linear_output.npy  layer_7_Linear_weights.npy
include/: CMakeLists.txt
include/src/cnpy/: cnpy.cpp
src/: main.cpp
utilities/: CMakeLists.txt
utilities/include/: BinaryFileReader.h  ConfigParser.h  JsonParser.h  NpyReader.h  OutputComparer.h  activations.h
utilities/src/: BinaryFileReader.cpp  ConfigParser.cpp  JsonParser.cpp  NpyReader.cpp  OutputComparer.cpp  activations.cpp
